# ci-failure-detective

./: LICENSE  README.md  pyproject.toml
ci_detective/: __init__.py  cli.py
ci_failure_detective.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
